fix : change field name in schedule request
change sorting timeAsc into sortAsc

--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -783,7 +783,7 @@ paths:
                 sorting:
                   type: object
                   properties:
-                    timeAsc:
+                    sortAsc:
                       type: boolean
                       example: true
                     price_from:
