--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -872,7 +872,7 @@ paths:
                     items:
                       $ref: "#/components/schemas/BasicFlightInfo"
 
-  /ticket/flight/{detailflightId}:
+  /ticket/flight/{detailFlightId}:
     get:
       tags:
         - "Ticket"
