--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 DATABASE_URL=
 
 JWT_SECRET_KEY=
+RESET_PASSWORD_REDIRECT_URL=""
+MIDTRANS_REDIRECT_URL=""
 
 GOOGLE_SENDER_EMAIL=""
 GOOGLE_CLIENT_ID=""
