--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -2187,6 +2187,104 @@ paths:
       security:
         - bearerAuth: []
 
+  /admin/flight:
+    get:
+      parameters:
+        - in: path
+          name: page
+          required: true
+          schema:
+            type: integer
+          description: page
+      tags:
+        - "Admin"
+      responses:
+        "200":
+          description: create new schedule data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/FlightCroncheduleOutput"
+    post:
+      tags:
+        - "Admin"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                time_departure:
+                  type: string
+                  example: "12:00"
+                time_arrive:
+                  type: string
+                  example: "13:30"
+                city_arrive_id:
+                  type: integer
+                  example: 1
+                city_destination_id:
+                  type: integer
+                  example: 2
+                discount:
+                  type: integer
+                  example: 20
+                is_monday:
+                  type: boolean
+                  example: true
+                is_thuesday:
+                  type: boolean
+                  example: true
+                is_wednesday:
+                  type: boolean
+                  example: true
+                is_thursday:
+                  type: boolean
+                  example: false
+                is_friday:
+                  type: boolean
+                  example: true
+                is_saturday:
+                  type: boolean
+                  example: false
+                is_sunday:
+                  type: boolean
+                  example: true
+                category:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      price:
+                        type: integer
+                        example: 200000
+                      detail_plane_id:
+                        type: integer
+                        example: 2
+      responses:
+        "200":
+          description: create new schedule data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: "#/components/schemas/FlightCroncheduleOutput"
+
 components:
   securitySchemes:
     bearerAuth:
@@ -2604,6 +2702,70 @@ components:
                   $ref: "#/components/schemas/City"
                 city_destination:
                   $ref: "#/components/schemas/City"
+    FlightCroncheduleOutput:
+      type: object
+      properties:
+        flight_key:
+          type: string
+          example: "sQGglf"
+        time_arrive:
+          type: string
+          format: date-time
+          example: "1970-01-01T13:30:00.000Z"
+        time_departure:
+          type: string
+          format: date-time
+          example: "1970-01-01T12:00:00.000Z"
+        city_arrive_id:
+          type: integer
+          example: 1
+        city_destination_id:
+          type: integer
+          example: 2
+        estimation_minute:
+          type: integer
+          example: 90
+        discount:
+          type: integer
+          example: 20
+        isMonday:
+          type: boolean
+          example: true
+        isThuesday:
+          type: boolean
+          example: true
+        isWednesday:
+          type: boolean
+          example: true
+        isThursday:
+          type: boolean
+          example: false
+        isFriday:
+          type: boolean
+          example: true
+        isSaturday:
+          type: boolean
+          example: false
+        isSunday:
+          type: boolean
+          example: true
+        detail:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              price:
+                type: integer
+                example: 200000
+              detail_plane_id:
+                type: integer
+                example: 2
+              cron_job_Schedule_id:
+                type: integer
+                example: 7
 
   requestBodies:
     orderRequest:
