--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/node": "^8.9.2",
     "@sentry/profiling-node": "^8.9.2",
     "@sentry/tracing": "^7.114.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
