--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Nodejs 18.x
+      - name: Install Node.js 18.x
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
@@ -26,6 +26,9 @@ jobs:
 
       - name: Install Prisma
         run: npm i prisma
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
       - name: Run Migrations
         run: |
